Fix footer misalignment

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -152,7 +152,7 @@ main {
   }
 }
 
-footer {
+.footer {
   flex-shrink: none;
   text-align: right;
 }
